--- a/notebooks/fetch_market_date.ipynb
+++ b/notebooks/fetch_market_date.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "632ada14",
    "metadata": {},
    "outputs": [],
@@ -13,19 +13,26 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "api_key = \"PIF0EWRVRKDTGYY4\"\n",
+    "# load variables from .env\n",
+    "load_dotenv()\n",
+    "\n",
+    "api_key = os.getenv(\"ALPHA_VANTAGE_API_KEY\")\n",
     "\n",
     "ts = TimeSeries(key = api_key, output_format = 'pandas')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7aac93c8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # yfinance input \n",
+    "\n",
     "# tickers = [\"^GSPC\", \"IEF\", \"GLD\"]\n",
     "# start_date = \"2018-01-01\"\n",
     "# end_date = \"2025-01-01\"\n",
@@ -42,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, meta_data = ts.get_daily(symbol = \"SPY\", outputsize = \"full\")\n"
+    "data, meta_data = ts.get_daily(symbol = \"SPY\", outputsize = \"full\")\n",
+    "    "
    ]
   }
  ],
