Fetched SPY historical data and formated DF

--- a/notebooks/fetch_market_date.ipynb
+++ b/notebooks/fetch_market_date.ipynb
@@ -47,11 +47,166 @@
    "execution_count": null,
    "id": "7738dc04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-07-11</th>\n",
+       "      <td>622.74</td>\n",
+       "      <td>624.8600</td>\n",
+       "      <td>621.5300</td>\n",
+       "      <td>623.62</td>\n",
+       "      <td>63670226.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-10</th>\n",
+       "      <td>624.20</td>\n",
+       "      <td>626.8701</td>\n",
+       "      <td>623.0100</td>\n",
+       "      <td>625.82</td>\n",
+       "      <td>57528960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-09</th>\n",
+       "      <td>622.77</td>\n",
+       "      <td>624.7200</td>\n",
+       "      <td>620.9105</td>\n",
+       "      <td>624.06</td>\n",
+       "      <td>66113326.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-08</th>\n",
+       "      <td>621.35</td>\n",
+       "      <td>622.1100</td>\n",
+       "      <td>619.5200</td>\n",
+       "      <td>620.34</td>\n",
+       "      <td>59024585.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-07</th>\n",
+       "      <td>623.36</td>\n",
+       "      <td>624.0300</td>\n",
+       "      <td>617.8700</td>\n",
+       "      <td>620.68</td>\n",
+       "      <td>74814505.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-03</th>\n",
+       "      <td>622.45</td>\n",
+       "      <td>626.2800</td>\n",
+       "      <td>622.4300</td>\n",
+       "      <td>625.34</td>\n",
+       "      <td>51065789.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-02</th>\n",
+       "      <td>617.24</td>\n",
+       "      <td>620.4900</td>\n",
+       "      <td>616.6100</td>\n",
+       "      <td>620.45</td>\n",
+       "      <td>66510374.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-01</th>\n",
+       "      <td>616.36</td>\n",
+       "      <td>618.8300</td>\n",
+       "      <td>615.5200</td>\n",
+       "      <td>617.65</td>\n",
+       "      <td>70030140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-30</th>\n",
+       "      <td>617.38</td>\n",
+       "      <td>619.2200</td>\n",
+       "      <td>615.0400</td>\n",
+       "      <td>617.85</td>\n",
+       "      <td>92502541.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-27</th>\n",
+       "      <td>612.88</td>\n",
+       "      <td>616.3900</td>\n",
+       "      <td>610.8300</td>\n",
+       "      <td>614.91</td>\n",
+       "      <td>86258398.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open      High       Low   Close      Volume\n",
+       "date                                                      \n",
+       "2025-07-11  622.74  624.8600  621.5300  623.62  63670226.0\n",
+       "2025-07-10  624.20  626.8701  623.0100  625.82  57528960.0\n",
+       "2025-07-09  622.77  624.7200  620.9105  624.06  66113326.0\n",
+       "2025-07-08  621.35  622.1100  619.5200  620.34  59024585.0\n",
+       "2025-07-07  623.36  624.0300  617.8700  620.68  74814505.0\n",
+       "2025-07-03  622.45  626.2800  622.4300  625.34  51065789.0\n",
+       "2025-07-02  617.24  620.4900  616.6100  620.45  66510374.0\n",
+       "2025-07-01  616.36  618.8300  615.5200  617.65  70030140.0\n",
+       "2025-06-30  617.38  619.2200  615.0400  617.85  92502541.0\n",
+       "2025-06-27  612.88  616.3900  610.8300  614.91  86258398.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Retrieve SPY dataframe\n",
     "data, meta_data = ts.get_daily(symbol = \"SPY\", outputsize = \"full\")\n",
-    "    "
+    "\n",
+    "# Rename columns and ensure index is the Date\n",
+    "data.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "data.index = pd.to_datetime(data.index)\n",
+    "\n",
+    "data.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eebd287e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
