--- a/notebooks/fetch_market_date.ipynb
+++ b/notebooks/fetch_market_date.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7738dc04",
    "metadata": {},
    "outputs": [
@@ -86,6 +86,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2025-07-18</th>\n",
+       "      <td>629.30</td>\n",
+       "      <td>629.4700</td>\n",
+       "      <td>626.4600</td>\n",
+       "      <td>627.58</td>\n",
+       "      <td>65621645.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-17</th>\n",
+       "      <td>624.40</td>\n",
+       "      <td>628.4048</td>\n",
+       "      <td>624.1800</td>\n",
+       "      <td>628.04</td>\n",
+       "      <td>68885683.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-16</th>\n",
+       "      <td>623.74</td>\n",
+       "      <td>624.7300</td>\n",
+       "      <td>618.0500</td>\n",
+       "      <td>624.22</td>\n",
+       "      <td>88987511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-15</th>\n",
+       "      <td>627.52</td>\n",
+       "      <td>627.8600</td>\n",
+       "      <td>622.0600</td>\n",
+       "      <td>622.14</td>\n",
+       "      <td>74317260.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-14</th>\n",
+       "      <td>623.16</td>\n",
+       "      <td>625.1581</td>\n",
+       "      <td>621.7999</td>\n",
+       "      <td>624.81</td>\n",
+       "      <td>51898518.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2025-07-11</th>\n",
        "      <td>622.74</td>\n",
        "      <td>624.8600</td>\n",
@@ -125,46 +165,6 @@
        "      <td>620.68</td>\n",
        "      <td>74814505.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-07-03</th>\n",
-       "      <td>622.45</td>\n",
-       "      <td>626.2800</td>\n",
-       "      <td>622.4300</td>\n",
-       "      <td>625.34</td>\n",
-       "      <td>51065789.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-07-02</th>\n",
-       "      <td>617.24</td>\n",
-       "      <td>620.4900</td>\n",
-       "      <td>616.6100</td>\n",
-       "      <td>620.45</td>\n",
-       "      <td>66510374.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-07-01</th>\n",
-       "      <td>616.36</td>\n",
-       "      <td>618.8300</td>\n",
-       "      <td>615.5200</td>\n",
-       "      <td>617.65</td>\n",
-       "      <td>70030140.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-06-30</th>\n",
-       "      <td>617.38</td>\n",
-       "      <td>619.2200</td>\n",
-       "      <td>615.0400</td>\n",
-       "      <td>617.85</td>\n",
-       "      <td>92502541.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-06-27</th>\n",
-       "      <td>612.88</td>\n",
-       "      <td>616.3900</td>\n",
-       "      <td>610.8300</td>\n",
-       "      <td>614.91</td>\n",
-       "      <td>86258398.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -172,19 +172,19 @@
       "text/plain": [
        "              Open      High       Low   Close      Volume\n",
        "date                                                      \n",
+       "2025-07-18  629.30  629.4700  626.4600  627.58  65621645.0\n",
+       "2025-07-17  624.40  628.4048  624.1800  628.04  68885683.0\n",
+       "2025-07-16  623.74  624.7300  618.0500  624.22  88987511.0\n",
+       "2025-07-15  627.52  627.8600  622.0600  622.14  74317260.0\n",
+       "2025-07-14  623.16  625.1581  621.7999  624.81  51898518.0\n",
        "2025-07-11  622.74  624.8600  621.5300  623.62  63670226.0\n",
        "2025-07-10  624.20  626.8701  623.0100  625.82  57528960.0\n",
        "2025-07-09  622.77  624.7200  620.9105  624.06  66113326.0\n",
        "2025-07-08  621.35  622.1100  619.5200  620.34  59024585.0\n",
-       "2025-07-07  623.36  624.0300  617.8700  620.68  74814505.0\n",
-       "2025-07-03  622.45  626.2800  622.4300  625.34  51065789.0\n",
-       "2025-07-02  617.24  620.4900  616.6100  620.45  66510374.0\n",
-       "2025-07-01  616.36  618.8300  615.5200  617.65  70030140.0\n",
-       "2025-06-30  617.38  619.2200  615.0400  617.85  92502541.0\n",
-       "2025-06-27  612.88  616.3900  610.8300  614.91  86258398.0"
+       "2025-07-07  623.36  624.0300  617.8700  620.68  74814505.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,8 +202,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "eebd287e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <td>267.840</td>\n",
+       "      <td>268.8100</td>\n",
+       "      <td>267.4000</td>\n",
+       "      <td>268.77</td>\n",
+       "      <td>86655749.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-03</th>\n",
+       "      <td>268.960</td>\n",
+       "      <td>270.6400</td>\n",
+       "      <td>268.9600</td>\n",
+       "      <td>270.47</td>\n",
+       "      <td>90070416.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-04</th>\n",
+       "      <td>271.200</td>\n",
+       "      <td>272.1600</td>\n",
+       "      <td>270.5400</td>\n",
+       "      <td>271.61</td>\n",
+       "      <td>80636408.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-05</th>\n",
+       "      <td>272.510</td>\n",
+       "      <td>273.5600</td>\n",
+       "      <td>271.9500</td>\n",
+       "      <td>273.42</td>\n",
+       "      <td>83523995.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08</th>\n",
+       "      <td>273.310</td>\n",
+       "      <td>274.1000</td>\n",
+       "      <td>272.9800</td>\n",
+       "      <td>273.92</td>\n",
+       "      <td>57319192.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-24</th>\n",
+       "      <td>596.060</td>\n",
+       "      <td>601.3400</td>\n",
+       "      <td>595.4700</td>\n",
+       "      <td>601.30</td>\n",
+       "      <td>33160097.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-26</th>\n",
+       "      <td>599.500</td>\n",
+       "      <td>602.4800</td>\n",
+       "      <td>598.0825</td>\n",
+       "      <td>601.34</td>\n",
+       "      <td>41338891.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-27</th>\n",
+       "      <td>597.540</td>\n",
+       "      <td>597.7761</td>\n",
+       "      <td>590.7647</td>\n",
+       "      <td>595.01</td>\n",
+       "      <td>64969310.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-30</th>\n",
+       "      <td>587.890</td>\n",
+       "      <td>591.7400</td>\n",
+       "      <td>584.4100</td>\n",
+       "      <td>588.22</td>\n",
+       "      <td>56578757.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-31</th>\n",
+       "      <td>589.905</td>\n",
+       "      <td>590.6399</td>\n",
+       "      <td>584.4200</td>\n",
+       "      <td>586.08</td>\n",
+       "      <td>57052654.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1761 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Open      High       Low   Close      Volume\n",
+       "date                                                       \n",
+       "2018-01-02  267.840  268.8100  267.4000  268.77  86655749.0\n",
+       "2018-01-03  268.960  270.6400  268.9600  270.47  90070416.0\n",
+       "2018-01-04  271.200  272.1600  270.5400  271.61  80636408.0\n",
+       "2018-01-05  272.510  273.5600  271.9500  273.42  83523995.0\n",
+       "2018-01-08  273.310  274.1000  272.9800  273.92  57319192.0\n",
+       "...             ...       ...       ...     ...         ...\n",
+       "2024-12-24  596.060  601.3400  595.4700  601.30  33160097.0\n",
+       "2024-12-26  599.500  602.4800  598.0825  601.34  41338891.0\n",
+       "2024-12-27  597.540  597.7761  590.7647  595.01  64969310.0\n",
+       "2024-12-30  587.890  591.7400  584.4100  588.22  56578757.0\n",
+       "2024-12-31  589.905  590.6399  584.4200  586.08  57052654.0\n",
+       "\n",
+       "[1761 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort dataframe \n",
+    "data.sort_index(inplace = True)\n",
+    "\n",
+    "# Date range\n",
+    "start_date = \"2018-01-01\"\n",
+    "end_date = \"2025-01-01\"\n",
+    "\n",
+    "# Filter dataframe by date\n",
+    "filtered_data = data.loc[start_date:end_date]\n",
+    "\n",
+    "# Check for missing values\n",
+    "filtered_data.isnull().sum()\n",
+    "\n",
+    "filtered_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ff34a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2024-12-24    0.011115\n",
+       "2024-12-26    0.000067\n",
+       "2024-12-27   -0.010526\n",
+       "2024-12-30   -0.011412\n",
+       "2024-12-31   -0.003638\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pct change of daily close prices\n",
+    "daily_returns = filtered_data[\"Close\"].pct_change().dropna()\n",
+    "\n",
+    "daily_returns.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7dab065c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>SMA_50</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <td>267.84</td>\n",
+       "      <td>268.81</td>\n",
+       "      <td>267.40</td>\n",
+       "      <td>268.77</td>\n",
+       "      <td>86655749.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-03</th>\n",
+       "      <td>268.96</td>\n",
+       "      <td>270.64</td>\n",
+       "      <td>268.96</td>\n",
+       "      <td>270.47</td>\n",
+       "      <td>90070416.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-04</th>\n",
+       "      <td>271.20</td>\n",
+       "      <td>272.16</td>\n",
+       "      <td>270.54</td>\n",
+       "      <td>271.61</td>\n",
+       "      <td>80636408.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-05</th>\n",
+       "      <td>272.51</td>\n",
+       "      <td>273.56</td>\n",
+       "      <td>271.95</td>\n",
+       "      <td>273.42</td>\n",
+       "      <td>83523995.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08</th>\n",
+       "      <td>273.31</td>\n",
+       "      <td>274.10</td>\n",
+       "      <td>272.98</td>\n",
+       "      <td>273.92</td>\n",
+       "      <td>57319192.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open    High     Low   Close      Volume  SMA_50\n",
+       "date                                                          \n",
+       "2018-01-02  267.84  268.81  267.40  268.77  86655749.0     NaN\n",
+       "2018-01-03  268.96  270.64  268.96  270.47  90070416.0     NaN\n",
+       "2018-01-04  271.20  272.16  270.54  271.61  80636408.0     NaN\n",
+       "2018-01-05  272.51  273.56  271.95  273.42  83523995.0     NaN\n",
+       "2018-01-08  273.31  274.10  272.98  273.92  57319192.0     NaN"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Modifying a slice of the dataframe to show 50 day moving average.\n",
+    "\n",
+    "# filtered_data = filtered_data.copy()\n",
+    "# filtered_data[\"SMA_50\"] = filtered_data[\"Close\"].rolling(window = 50).mean()\n",
+    "\n",
+    "filtered_data.loc[:, \"SMA_50\"] = filtered_data[\"Close\"].rolling(window = 50).mean()\n",
+    "\n",
+    "filtered_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b28658",
    "metadata": {},
    "outputs": [],
    "source": []
