feat: add signal to price data (close > SMA_50)

--- a/notebooks/fetch_market_date.ipynb
+++ b/notebooks/fetch_market_date.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "7dab065c",
    "metadata": {},
    "outputs": [
@@ -452,65 +452,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-01-02</th>\n",
-       "      <td>267.84</td>\n",
-       "      <td>268.81</td>\n",
-       "      <td>267.40</td>\n",
-       "      <td>268.77</td>\n",
-       "      <td>86655749.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2024-12-24</th>\n",
+       "      <td>596.060</td>\n",
+       "      <td>601.3400</td>\n",
+       "      <td>595.4700</td>\n",
+       "      <td>601.30</td>\n",
+       "      <td>33160097.0</td>\n",
+       "      <td>591.9854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-03</th>\n",
-       "      <td>268.96</td>\n",
-       "      <td>270.64</td>\n",
-       "      <td>268.96</td>\n",
-       "      <td>270.47</td>\n",
-       "      <td>90070416.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2024-12-26</th>\n",
+       "      <td>599.500</td>\n",
+       "      <td>602.4800</td>\n",
+       "      <td>598.0825</td>\n",
+       "      <td>601.34</td>\n",
+       "      <td>41338891.0</td>\n",
+       "      <td>592.4166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-04</th>\n",
-       "      <td>271.20</td>\n",
-       "      <td>272.16</td>\n",
-       "      <td>270.54</td>\n",
-       "      <td>271.61</td>\n",
-       "      <td>80636408.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2024-12-27</th>\n",
+       "      <td>597.540</td>\n",
+       "      <td>597.7761</td>\n",
+       "      <td>590.7647</td>\n",
+       "      <td>595.01</td>\n",
+       "      <td>64969310.0</td>\n",
+       "      <td>592.6708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-05</th>\n",
-       "      <td>272.51</td>\n",
-       "      <td>273.56</td>\n",
-       "      <td>271.95</td>\n",
-       "      <td>273.42</td>\n",
-       "      <td>83523995.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2024-12-30</th>\n",
+       "      <td>587.890</td>\n",
+       "      <td>591.7400</td>\n",
+       "      <td>584.4100</td>\n",
+       "      <td>588.22</td>\n",
+       "      <td>56578757.0</td>\n",
+       "      <td>592.7882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-08</th>\n",
-       "      <td>273.31</td>\n",
-       "      <td>274.10</td>\n",
-       "      <td>272.98</td>\n",
-       "      <td>273.92</td>\n",
-       "      <td>57319192.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2024-12-31</th>\n",
+       "      <td>589.905</td>\n",
+       "      <td>590.6399</td>\n",
+       "      <td>584.4200</td>\n",
+       "      <td>586.08</td>\n",
+       "      <td>57052654.0</td>\n",
+       "      <td>592.8180</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Open    High     Low   Close      Volume  SMA_50\n",
-       "date                                                          \n",
-       "2018-01-02  267.84  268.81  267.40  268.77  86655749.0     NaN\n",
-       "2018-01-03  268.96  270.64  268.96  270.47  90070416.0     NaN\n",
-       "2018-01-04  271.20  272.16  270.54  271.61  80636408.0     NaN\n",
-       "2018-01-05  272.51  273.56  271.95  273.42  83523995.0     NaN\n",
-       "2018-01-08  273.31  274.10  272.98  273.92  57319192.0     NaN"
+       "               Open      High       Low   Close      Volume    SMA_50\n",
+       "date                                                                 \n",
+       "2024-12-24  596.060  601.3400  595.4700  601.30  33160097.0  591.9854\n",
+       "2024-12-26  599.500  602.4800  598.0825  601.34  41338891.0  592.4166\n",
+       "2024-12-27  597.540  597.7761  590.7647  595.01  64969310.0  592.6708\n",
+       "2024-12-30  587.890  591.7400  584.4100  588.22  56578757.0  592.7882\n",
+       "2024-12-31  589.905  590.6399  584.4200  586.08  57052654.0  592.8180"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,13 +525,145 @@
     "\n",
     "filtered_data.loc[:, \"SMA_50\"] = filtered_data[\"Close\"].rolling(window = 50).mean()\n",
     "\n",
-    "filtered_data.head()"
+    "filtered_data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "34b28658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>SMA_50</th>\n",
+       "      <th>Signal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-12-24</th>\n",
+       "      <td>596.060</td>\n",
+       "      <td>601.3400</td>\n",
+       "      <td>595.4700</td>\n",
+       "      <td>601.30</td>\n",
+       "      <td>33160097.0</td>\n",
+       "      <td>591.9854</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-26</th>\n",
+       "      <td>599.500</td>\n",
+       "      <td>602.4800</td>\n",
+       "      <td>598.0825</td>\n",
+       "      <td>601.34</td>\n",
+       "      <td>41338891.0</td>\n",
+       "      <td>592.4166</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-27</th>\n",
+       "      <td>597.540</td>\n",
+       "      <td>597.7761</td>\n",
+       "      <td>590.7647</td>\n",
+       "      <td>595.01</td>\n",
+       "      <td>64969310.0</td>\n",
+       "      <td>592.6708</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-30</th>\n",
+       "      <td>587.890</td>\n",
+       "      <td>591.7400</td>\n",
+       "      <td>584.4100</td>\n",
+       "      <td>588.22</td>\n",
+       "      <td>56578757.0</td>\n",
+       "      <td>592.7882</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-31</th>\n",
+       "      <td>589.905</td>\n",
+       "      <td>590.6399</td>\n",
+       "      <td>584.4200</td>\n",
+       "      <td>586.08</td>\n",
+       "      <td>57052654.0</td>\n",
+       "      <td>592.8180</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Open      High       Low   Close      Volume    SMA_50  Signal\n",
+       "date                                                                         \n",
+       "2024-12-24  596.060  601.3400  595.4700  601.30  33160097.0  591.9854       1\n",
+       "2024-12-26  599.500  602.4800  598.0825  601.34  41338891.0  592.4166       1\n",
+       "2024-12-27  597.540  597.7761  590.7647  595.01  64969310.0  592.6708       1\n",
+       "2024-12-30  587.890  591.7400  584.4100  588.22  56578757.0  592.7882       0\n",
+       "2024-12-31  589.905  590.6399  584.4200  586.08  57052654.0  592.8180       0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding the signal column \n",
+    "\n",
+    "filtered_data.loc[:, \"Signal\"] = (filtered_data[\"Close\"] > filtered_data[\"SMA_50\"]).astype(int)\n",
+    "\n",
+    "filtered_data.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b28658",
+   "id": "8cc0390f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3390f041",
    "metadata": {},
    "outputs": [],
    "source": []
