--- a/notebooks/fetch_market_date.ipynb
+++ b/notebooks/fetch_market_date.ipynb
@@ -909,13 +909,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "3390f041",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>SMA_50</th>\n",
+       "      <th>Signal</th>\n",
+       "      <th>Daily_Return</th>\n",
+       "      <th>Strategy_Return</th>\n",
+       "      <th>Cum_BuyHold</th>\n",
+       "      <th>Cum_Strategy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <td>267.840</td>\n",
+       "      <td>268.8100</td>\n",
+       "      <td>267.4000</td>\n",
+       "      <td>268.77</td>\n",
+       "      <td>86655749.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-03</th>\n",
+       "      <td>268.960</td>\n",
+       "      <td>270.6400</td>\n",
+       "      <td>268.9600</td>\n",
+       "      <td>270.47</td>\n",
+       "      <td>90070416.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006325</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.006325</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-04</th>\n",
+       "      <td>271.200</td>\n",
+       "      <td>272.1600</td>\n",
+       "      <td>270.5400</td>\n",
+       "      <td>271.61</td>\n",
+       "      <td>80636408.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.004215</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.010567</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-05</th>\n",
+       "      <td>272.510</td>\n",
+       "      <td>273.5600</td>\n",
+       "      <td>271.9500</td>\n",
+       "      <td>273.42</td>\n",
+       "      <td>83523995.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006664</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.017301</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08</th>\n",
+       "      <td>273.310</td>\n",
+       "      <td>274.1000</td>\n",
+       "      <td>272.9800</td>\n",
+       "      <td>273.92</td>\n",
+       "      <td>57319192.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001829</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.019161</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-24</th>\n",
+       "      <td>596.060</td>\n",
+       "      <td>601.3400</td>\n",
+       "      <td>595.4700</td>\n",
+       "      <td>601.30</td>\n",
+       "      <td>33160097.0</td>\n",
+       "      <td>591.9854</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.011115</td>\n",
+       "      <td>0.011115</td>\n",
+       "      <td>2.237229</td>\n",
+       "      <td>1.687549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-26</th>\n",
+       "      <td>599.500</td>\n",
+       "      <td>602.4800</td>\n",
+       "      <td>598.0825</td>\n",
+       "      <td>601.34</td>\n",
+       "      <td>41338891.0</td>\n",
+       "      <td>592.4166</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000067</td>\n",
+       "      <td>0.000067</td>\n",
+       "      <td>2.237378</td>\n",
+       "      <td>1.687661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-27</th>\n",
+       "      <td>597.540</td>\n",
+       "      <td>597.7761</td>\n",
+       "      <td>590.7647</td>\n",
+       "      <td>595.01</td>\n",
+       "      <td>64969310.0</td>\n",
+       "      <td>592.6708</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.010526</td>\n",
+       "      <td>-0.010526</td>\n",
+       "      <td>2.213826</td>\n",
+       "      <td>1.669896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-30</th>\n",
+       "      <td>587.890</td>\n",
+       "      <td>591.7400</td>\n",
+       "      <td>584.4100</td>\n",
+       "      <td>588.22</td>\n",
+       "      <td>56578757.0</td>\n",
+       "      <td>592.7882</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.011412</td>\n",
+       "      <td>-0.011412</td>\n",
+       "      <td>2.188563</td>\n",
+       "      <td>1.650840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-31</th>\n",
+       "      <td>589.905</td>\n",
+       "      <td>590.6399</td>\n",
+       "      <td>584.4200</td>\n",
+       "      <td>586.08</td>\n",
+       "      <td>57052654.0</td>\n",
+       "      <td>592.8180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.003638</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>2.180601</td>\n",
+       "      <td>1.650840</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1761 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Open      High       Low   Close      Volume    SMA_50  Signal  \\\n",
+       "date                                                                            \n",
+       "2018-01-02  267.840  268.8100  267.4000  268.77  86655749.0       NaN       0   \n",
+       "2018-01-03  268.960  270.6400  268.9600  270.47  90070416.0       NaN       0   \n",
+       "2018-01-04  271.200  272.1600  270.5400  271.61  80636408.0       NaN       0   \n",
+       "2018-01-05  272.510  273.5600  271.9500  273.42  83523995.0       NaN       0   \n",
+       "2018-01-08  273.310  274.1000  272.9800  273.92  57319192.0       NaN       0   \n",
+       "...             ...       ...       ...     ...         ...       ...     ...   \n",
+       "2024-12-24  596.060  601.3400  595.4700  601.30  33160097.0  591.9854       1   \n",
+       "2024-12-26  599.500  602.4800  598.0825  601.34  41338891.0  592.4166       1   \n",
+       "2024-12-27  597.540  597.7761  590.7647  595.01  64969310.0  592.6708       1   \n",
+       "2024-12-30  587.890  591.7400  584.4100  588.22  56578757.0  592.7882       0   \n",
+       "2024-12-31  589.905  590.6399  584.4200  586.08  57052654.0  592.8180       0   \n",
+       "\n",
+       "            Daily_Return  Strategy_Return  Cum_BuyHold  Cum_Strategy  \n",
+       "date                                                                  \n",
+       "2018-01-02           NaN              NaN          NaN           NaN  \n",
+       "2018-01-03      0.006325         0.000000     1.006325      1.000000  \n",
+       "2018-01-04      0.004215         0.000000     1.010567      1.000000  \n",
+       "2018-01-05      0.006664         0.000000     1.017301      1.000000  \n",
+       "2018-01-08      0.001829         0.000000     1.019161      1.000000  \n",
+       "...                  ...              ...          ...           ...  \n",
+       "2024-12-24      0.011115         0.011115     2.237229      1.687549  \n",
+       "2024-12-26      0.000067         0.000067     2.237378      1.687661  \n",
+       "2024-12-27     -0.010526        -0.010526     2.213826      1.669896  \n",
+       "2024-12-30     -0.011412        -0.011412     2.188563      1.650840  \n",
+       "2024-12-31     -0.003638        -0.000000     2.180601      1.650840  \n",
+       "\n",
+       "[1761 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Cumulative returns"
+    "# Cumulative returns to compare Buy and Hold vs Strategy\n",
+    "\n",
+    "filtered_data.loc[:, \"Cum_BuyHold\"] = (1 + filtered_data[\"Daily_Return\"]).cumprod()\n",
+    "filtered_data.loc[:, \"Cum_Strategy\"] = (1 + filtered_data[\"Strategy_Return\"]).cumprod()\n",
+    "\n",
+    "filtered_data\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e5b30e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
