feat: created 3 asset close price dataframe

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -2,17 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "689cf5c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SPY</th>\n",
+       "      <th>IEF</th>\n",
+       "      <th>GLD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-07-21</th>\n",
+       "      <td>628.77</td>\n",
+       "      <td>94.73</td>\n",
+       "      <td>313.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-22</th>\n",
+       "      <td>628.86</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>316.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-23</th>\n",
+       "      <td>634.21</td>\n",
+       "      <td>94.66</td>\n",
+       "      <td>312.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-24</th>\n",
+       "      <td>634.42</td>\n",
+       "      <td>94.52</td>\n",
+       "      <td>310.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-25</th>\n",
+       "      <td>637.10</td>\n",
+       "      <td>94.74</td>\n",
+       "      <td>307.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "True"
+       "               SPY    IEF     GLD\n",
+       "date                             \n",
+       "2025-07-21  628.77  94.73  313.13\n",
+       "2025-07-22  628.86  95.00  316.10\n",
+       "2025-07-23  634.21  94.66  312.18\n",
+       "2025-07-24  634.42  94.52  310.27\n",
+       "2025-07-25  637.10  94.74  307.40"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +107,17 @@
     "    data.columns = [symbol] \n",
     "    data.index = pd.to_datetime(data.index) # Converts index from data strings to date/time objects\n",
     "    return data.sort_index() \n",
-    "\n"
+    "\n",
+    "\n",
+    "# Get asset data for 3 assets\n",
+    "spy = get_asset_data(\"SPY\")\n",
+    "ief = get_asset_data(\"IEF\")\n",
+    "gld = get_asset_data(\"GLD\")\n",
+    "\n",
+    "# Merge into one DataFrame\n",
+    "assets = pd.concat([spy, ief, gld], axis = 1).dropna()\n",
+    "\n",
+    "assets.tail()\n"
    ]
   },
   {
