feat: add 21 day trailing return

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -122,8 +122,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6708060a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SPY</th>\n",
+       "      <th>IEF</th>\n",
+       "      <th>GLD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-07-21</th>\n",
+       "      <td>0.052440</td>\n",
+       "      <td>0.002010</td>\n",
+       "      <td>0.009250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-22</th>\n",
+       "      <td>0.058188</td>\n",
+       "      <td>0.004228</td>\n",
+       "      <td>0.019250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-23</th>\n",
+       "      <td>0.056752</td>\n",
+       "      <td>-0.002844</td>\n",
+       "      <td>0.003536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-24</th>\n",
+       "      <td>0.045552</td>\n",
+       "      <td>-0.007768</td>\n",
+       "      <td>0.013325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-07-25</th>\n",
+       "      <td>0.049381</td>\n",
+       "      <td>-0.005876</td>\n",
+       "      <td>0.000912</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 SPY       IEF       GLD\n",
+       "date                                    \n",
+       "2025-07-21  0.052440  0.002010  0.009250\n",
+       "2025-07-22  0.058188  0.004228  0.019250\n",
+       "2025-07-23  0.056752 -0.002844  0.003536\n",
+       "2025-07-24  0.045552 -0.007768  0.013325\n",
+       "2025-07-25  0.049381 -0.005876  0.000912"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate 21 day trailing return (trading month)\n",
+    "lookback_days = 21\n",
+    "\n",
+    "trailing_returns = assets.pct_change(periods = lookback_days)\n",
+    "\n",
+    "trailing_returns.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8855022b",
    "metadata": {},
    "outputs": [],
    "source": []
