feat: added rotation signal based on highest 21 day trailing average

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -219,8 +219,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8855022b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2025-07-21    SPY\n",
+       "2025-07-22    SPY\n",
+       "2025-07-23    SPY\n",
+       "2025-07-24    SPY\n",
+       "2025-07-25    SPY\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Implementing rotation signal based on asset with highest 21 day trailing average\n",
+    "rotation_signal = trailing_returns.dropna().idxmax(axis = 1)\n",
+    "\n",
+    "rotation_signal.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7179db5",
    "metadata": {},
    "outputs": [],
    "source": []
