feat: aligned signal and calculated strategy returns series

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -252,6 +252,49 @@
    "execution_count": null,
    "id": "c7179db5",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2025-07-21    0.001896\n",
+       "2025-07-22    0.000143\n",
+       "2025-07-23    0.008507\n",
+       "2025-07-24    0.000331\n",
+       "2025-07-25    0.004224\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find daily returns across assets\n",
+    "daily_returns = assets.pct_change().dropna()\n",
+    "\n",
+    "# Realign signal to rotate based on previous days asset and reindex\n",
+    "aligned_signal = rotation_signal.shift(1).reindex(daily_returns.index).dropna()\n",
+    "\n",
+    "# Calculating the strategy returns based on aligned signal\n",
+    "strategy_returns = []\n",
+    "for date, asset in aligned_signal.items():\n",
+    "    value = daily_returns.loc[date, asset]\n",
+    "    strategy_returns.append(value)\n",
+    "\n",
+    "# Indexing strategy_returns as a series\n",
+    "strategy_returns = pd.Series(strategy_returns, index = aligned_signal.index)\n",
+    "\n",
+    "strategy_returns.tail()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea3211d",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
