feat: cum returns for strategy, SPY, and equal weighted

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "689cf5c7",
    "metadata": {},
    "outputs": [
@@ -91,6 +91,7 @@
    "source": [
     "from alpha_vantage.timeseries import TimeSeries\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
@@ -292,8 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0ea3211d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cumulative return of strategy\n",
+    "cum_strategy = (1 + strategy_returns).cumprod()\n",
+    "\n",
+    "# Compare to Buy&Hold SPY\n",
+    "cum_spy = (1 + daily_returns[\"SPY\"]).cumprod()\n",
+    "\n",
+    "# Compare to equal weighted portfolio\n",
+    "equal_returns = daily_returns[[\"SPY\", \"IEF\", \"GLD\"]].mean(axis = 1)\n",
+    "cum_equal = (1 + equal_returns).cumprod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49c7bac2",
    "metadata": {},
    "outputs": [],
    "source": []
