feat: add performance evaluation function

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -352,8 +352,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "1f81d4aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Evaluating the performance of each of the strategies\n",
+    "\n",
+    "def evaluate_performance(returns, rfr = 0):\n",
+    "    results = {}\n",
+    "    cum = (1 + returns).cumprod()\n",
+    "    results[\"Total Return\"] = cum.iloc[-1] - 1 \n",
+    "    results[\"Annualized Volatility\"] = returns.std() * np.sqrt(252)\n",
+    "    results[\"Annualized Return\"] = (1 + results[\"Total Return\"])**(252 / len(returns)) - 1\n",
+    "    results[\"Sharpe Ratio\"] = ((returns.mean() - (rfr / 252)) / returns.std()) * np.sqrt(252)\n",
+    "    \n",
+    "    # Biggest loss experienced\n",
+    "    cum_max = cum.cummax()\n",
+    "    drawdown = cum / cum_max - 1\n",
+    "    results[\"Max Drawdown\"] = drawdown.min()\n",
+    "\n",
+    "    return pd.Series(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46298798",
    "metadata": {},
    "outputs": [],
    "source": []
