feat: evaluted performance

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -379,8 +379,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "46298798",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Return             3.802286\n",
+       "Annualized Volatility    0.147782\n",
+       "Annualized Return        0.079307\n",
+       "Sharpe Ratio             0.590588\n",
+       "Max Drawdown            -0.309714\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_performance(strategy_returns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b60d1dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Return             4.365504\n",
+       "Annualized Volatility    0.191829\n",
+       "Annualized Return        0.084787\n",
+       "Sharpe Ratio             0.520295\n",
+       "Max Drawdown            -0.564737\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_performance(daily_returns[\"SPY\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bf8ddbc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Return             3.070132\n",
+       "Annualized Volatility    0.090177\n",
+       "Annualized Return        0.070363\n",
+       "Sharpe Ratio             0.799234\n",
+       "Max Drawdown            -0.218607\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_performance(equal_returns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac635d56",
    "metadata": {},
    "outputs": [],
    "source": []
