docs: fixed comments

--- a/notebooks/asset_rotation_strategy.ipynb
+++ b/notebooks/asset_rotation_strategy.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8855022b",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "# Implementing rotation signal based on asset with highest 21 day trailing average\n",
+    "# Implementing rotation signal based on asset with highest 21 day trailing return\n",
     "rotation_signal = trailing_returns.dropna().idxmax(axis = 1)\n",
     "\n",
     "rotation_signal.tail()"
